@@ -10,6 +10,11 @@ What's New in Stackless 2.7.XX?
 
 *Release date: 20XX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issues/119
+  Fix a rare bug in the stack unwinding mechanism, that caused a SystemError
+  exception or an assertion violation, if a __del__()-method or a weakref
+  callback runs during stack unwinding.
+
 - https://bitbucket.org/stackless-dev/stackless/issues/117
   Fix various reference leaks:
   - Leak of a reference to Py_None in generator.throw()
